@@ -1,4 +1,4 @@
-$Id: PROTOCOL,v 1.13 2004/03/08 14:00:54 mkern Exp $
+$Id: PROTOCOL,v 1.14 2004/03/08 21:09:56 mkern Exp $
 
                        The FastTrack Protocol
                        ======================
@@ -654,10 +654,10 @@ The first byte is the message type:
                  any given time for a sample of 200 nodes.)
   2     unknown (In a 200 node sample 81 were 0x3c13, 40 were 0x5d06,
                  11 were 0x800e, 10 were 0xc005.)
-  1     load? (Between 0 and 99.)
-  1     number of children? (Majority evenly destributed below 15. About 15 per
-                             cent above 220. Large gap in between. Changes too
-                             fast to be uptime in minutes.)
+  1     load (load in percent, Same value as in TCP message 0x00)
+  1     number of children? (Majority evenly destributed below 15. About 15
+                             percent above 220. Large gap in between. Changes
+                             too fast to be uptime in minutes.)
   n     zero-terminated network name
 
   Kazaa only seems to connect to nodes that return 0x28 in response to a ping,
