@@ -1,5 +1,5 @@
 /*
- * $Id: fst_udp_discover.h,v 1.12 2004/03/08 18:21:37 mkern Exp $
+ * $Id: fst_udp_discover.h,v 1.13 2004/03/08 21:09:57 mkern Exp $
  *
  * Copyright (C) 2003 giFT-FastTrack project
  * http://developer.berlios.de/projects/gift-fasttrack
