@@ -1,5 +1,5 @@
 /*
- * $Id: fst_utils.c,v 1.11 2004/03/08 18:21:37 mkern Exp $
+ * $Id: fst_utils.c,v 1.12 2004/03/08 21:09:57 mkern Exp $
  *
  * Copyright (C) 2003 giFT-FastTrack project
  * Portions Copyright (C) 2001 Shtirlitz <shtirlitz@unixwarez.net>
