@@ -1,5 +1,9 @@
- $Id: ChangeLog,v 1.18 2004/03/07 23:16:30 mkern Exp $
+ $Id: ChangeLog,v 1.19 2004/03/08 21:09:56 mkern Exp $
 
+2004-03-08  Markus Kern <mkern@users.berlios.de>
+
+	* More UDP tweaks
+	* Reply to protocol version notify.
 
 2004-03-07  Markus Kern <mkern@users.berlios.de>
 
